--- a/anatomyqu.html
+++ b/anatomyqu.html
@@ -688,7 +688,7 @@
                     <i class="fas fa-user"></i>
                     Profile
                 </a>
-                <a href="#" class="action-btn primary">
+                <a href="index.html" class="action-btn primary">
                     <i class="fas fa-home"></i>
                     Dashboard
                 </a>
