--- a/quizes.html
+++ b/quizes.html
@@ -942,7 +942,7 @@
                     <i class="fas fa-user"></i>
                     Profile
                 </a>
-                <a href="home.html" class="action-btn primary">
+                <a href="index.html" class="action-btn primary">
                     <i class="fas fa-home"></i>
                     Dashboard
                 </a>
